changed the port and it works now

--- a/src/hooks/bin/install
+++ b/src/hooks/bin/install
@@ -3,5 +3,5 @@
 set -e
 
 mkdir $SNAP_COMMON/config
-                                                                               
+touch $SNAP_COMMON/config/text-file.tmpl                                                                              
                                     
